--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,13 @@
 			<version>RELEASE</version>
 			<scope>compile</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<optional>true</optional>
+			<version>3.2.4</version>
+		</dependency>
 	</dependencies>
 
 	<build>
